--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "vuepress-blog",
+  "name": "react-blog",
   "version": "1.0.0",
   "description": "this is a presonal blog",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "docs:dev": "vuepress dev docs",
-    "docs:build": "vuepress build docs"
+    "start": "vuepress dev docs",
+    "build": "vuepress build docs",
+    "deploy": "sh deploy.sh"
   },
   "keywords": [
     "blog"
