--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "license": "ISC",
   "devDependencies": {
     "@vuepress-reco/vuepress-plugin-bulletin-popover": "^1.6.13",
+    "@vuepress/plugin-back-to-top": "^1.9.7",
     "vuepress": "^1.9.5",
     "vuepress-plugin-nuggets-style-copy": "^1.0.3"
   },
